@@ -32,7 +32,7 @@ Analysis::~Analysis()
 //-----------------------------------------------//
 // Average 1D Result
 //-----------------------------------------------//
-void Analysis::Average1DResult()
+void Analysis::Average1DResult(TFile* outfile)
 {
 
   string indir = "rootfiles/";
@@ -58,9 +58,6 @@ void Analysis::Average1DResult()
   float theta_i = 25; // start at 25 degrees
   float theta[np];
   float RE[np];
-
-  // Open file to save results
-  TFile* outfile = new TFile("../results/Avg1D.root","recreate");
 
   // Load profiles and save electric field
   TFile* infile  = NULL;
@@ -102,10 +99,59 @@ void Analysis::Average1DResult()
 
   delete infile;
 
-  outfile->Write();
-  outfile->Close();
-  delete outfile;
+}
 
+//-----------------------------------------------//
+// Analytic 1-D Result
+//-----------------------------------------------//
+void Analysis::Analytic1DResult(TFile* outfile)
+{
+
+  // In this case I need to simply loop over theta
+  // for a fixed frequency and save the results. We
+  // will loop over two shower energies: 100 GeV, 1TeV
+  // this is because that is all I have by way of simulation
+  // at the moment.
+  vector<double> showerEs; // in TeV
+  showerEs.push_back(0.1); 
+  showerEs.push_back(1);
+
+  vector<string> gnames;
+  gnames.push_back("ana_100GeV");
+  gnames.push_back("ana_1TeV");
+
+  // Get Rx|E| vs. Degree for constant freq                                                                                        
+  float freq    = 300; // MHz
+  int np        = 100;
+  float step    = 0.55;
+  float theta_i = 25;  // start at 25 degrees 
+  float theta[np];
+  float RE[np];  
+
+  // Loop over energies
+  for(uint s=0; s<showerEs.size(); ++s){
+    double showerE = showerEs.at(s);
+    string gname   = gnames.at(s);
+
+    // Loop and get Rx|E|
+    for(int i=0; i<np; ++i){
+      // Save theta
+      theta[i] = theta_i + step*i;
+      // Save Rx|E|
+      RE[i] = m_dim1->getAnalyticRE(theta[i]/Phys::DEG_RAD,
+				    freq,
+				    showerE);
+      
+    }// end loop over points 
+
+    // Make graph and save
+    outfile->cd();
+    TGraph* gr = new TGraph(np,theta,RE);
+    gr->SetName(gname.c_str());
+    gr->Write();
+    delete gr;    
+
+  }// end loop over shower energies
 
 }
 
@@ -128,6 +174,7 @@ vector<double> Analysis::convert(TProfile* prof)
 
 }
 
+
 //********************************************************************//
 //                 --- END OF ANALYSIS CODE ---                       //
 //********************************************************************//
@@ -141,11 +188,19 @@ int main(int argc, char** argv)
 
   // Create Ana object
   Analysis* ana = new Analysis();
+
+  // Create an output for this run
+  TFile* outfile = new TFile("../results/AnaOutput.root","recreate");
   
   // Execute commands
-  ana->Average1DResult();
+  ana->Average1DResult(outfile);
+  ana->Analytic1DResult(outfile);
   
   // Clean up, we're done here.
+  outfile->Write();
+  outfile->Close();
+  delete outfile;
+
   delete ana;  
   return 0;
   
